도메인 수정, 레파지토리(member, board) 및 테스트코드  작성